--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="stylesheet" href="./CSS/style.css" type="text/css">
     <title>Home</title>
 </head>
 <body>
@@ -20,12 +20,13 @@
                     <li><a href="#">RESUME</a></li>
                     <li><a href="#">ABOUT ME</a></li>
                     <li><a href="contact.php">CONTECT</a></li>
+                    <li><a href="login.php">LOGIN</a></li>
                 </ul>
             </nav>
         <div class="burger">
             <div class="burger-menu">
                 <div class="first-slice"></div>
-                <div class="second-slice"></div>              
+                <div class="second-slice"></div>
             </div>
         </div>
     </header>
@@ -34,6 +35,9 @@
         <div class="bubble2"></div>
         <div class="bubble3"></div>
         <div class="bubble4"></div>
+        <div class="back-image">
+            <img src="./images/enter-Image.png" alt="image"/>
+        </div>
         <div class="hello">
             <div class="hello-icon">
                 <h2>👋🏻</h2>
@@ -45,6 +49,17 @@
         </div>
         <div class="skills">
             <h3>7 Proggraming Languages known with UI Design</h3>
+        </div>
+        <div class="certificates">
+            <div class="icon">
+                <img src="https://img.icons8.com/nolan/64/add-list.png"/>
+            </div>
+            <div class="certi-text">
+                <h3>Certificates</h3>
+                <h5>1. Python (Coursera)</h5>
+                <h5>2. Google IT Security (Coursera)</h5>
+                <h5>3. Ethical Haking </h5>
+            </div>
         </div>
         <div class="social-media">
             <div class="icons">
